@@ -1,7 +1,6 @@
 DIST FiSH-irssi.v0.99-source.zip 43491 RMD160 d4a042a0ca28dfe2839f13a46a18d009df769bce SHA1 4af337be9b985f134c0e84bb652aad63e28c46be SHA256 fe5ec748886620494c51e568093ff226b663a3a7ee7716ab06c24e29bf828e3c
-DIST irssi-0.8.13.tar.bz2 946203 RMD160 d09b76fcb6cbdacea510cefd63ad5638b623f5a3 SHA1 8ad6e5de345e64a2aad372ae237fd59a7b43f47b SHA256 896541ac837421290934e2658ab364d4d3f0326259489a94a0cd166e2b05d735
 DIST irssi-0.8.9.tar.bz2 816465 RMD160 7a0a2a639c041802bfddd458c35bccaec8084013 SHA1 57799a1e99ac5f6694eb6fd049d39a4e2e51f576 SHA256 230ffa21a97f930000e0004f18cf5b709d5da5408d297e1567538a53cf91c32c
-EBUILD irssi-mod-fish-0.99-r1.ebuild 2098 RMD160 d4bc7bb87696c927fa57c3d3938594fb3cc5eb14 SHA1 fdd3a947bbf67d4dffe3172320a362f2627df0af SHA256 733a4e30c1895edd102d1e11df175150cf4f68c3489eead3697c9c5ed1517cec
+EBUILD irssi-mod-fish-0.99-r1.ebuild 1940 RMD160 490e9289acd18983547d1b2db1a07d4918258945 SHA1 f48e44bc1f6250f02a6369ade36f624bd98a86d6 SHA256 942604d6a1063edc1afdcd7b026084a525e3607656780725a53b0b6fd1b1c38c
 EBUILD irssi-mod-fish-0.99.ebuild 2094 RMD160 db250d3038d043a887a33102ae2b524b84d1809e SHA1 c4dedf758fc31c5b5e77e9318a2dd7ef02812e3b SHA256 691b154e3cc75f4b7d8553a8263f55622499d5a0439301414909c25be36052ea
-MISC ChangeLog 608 RMD160 b186a92c1a727d23e995e8620fb55623fa1c298a SHA1 c05d560e490de2b0047e6fee3340c6f7f9c432b2 SHA256 371639c0b4f655740328f5c9e30318825ca7fe00df1388ce6f2dd38b56a0de08
+MISC ChangeLog 709 RMD160 10e55b329cec6602098dbf6e3b70b01ec9648cd1 SHA1 fc61f6513104e394163fa3cbd46969e97fbd4bf0 SHA256 321ae0e99be74837470669b7a2ab11c481be23fd3fabd8df2e912cbdb6b14416
 MISC metadata.xml 675 RMD160 040d901941380fa161431341bbf3c2ed20d48900 SHA1 7d4efc1107d30e8e12664355ff46556f745c3fce SHA256 0ffb5fc63ca097afaf8618af30e3b159baa5347b78c2bafec458eae2855567fe
